# Pez

./: .gitignore  Andrea.md  LICENSE  README.md  User.md
.github/workflows/: build-and-push.yml  docker-publis-comms.yml  docker-publish-bluerov.yml  docker-publish.yml
blueos_ros/: README.md
blueos_ros/blueos_ros_extension/: Dockerfile
blueos_ros/blueos_ws/: README.md
blueos_ros/blueos_ws/src/bluerov_server/: README.md  package.xml
blueos_ros/blueos_ws/src/bluerov_server/scripts/: server.py
blueos_ros/blueos_ws/src/pez_comms/: CMakeLists.txt  README.md
blueos_ros/blueos_ws/src/pez_comms/config/: bluerov_config.yaml  guide_config.yaml
blueos_ros/blueos_ws/src/pez_comms/launch/: comms.launch.xml
blueos_ros/blueos_ws/src/pez_comms/src/pez_comms/core/: modem_io.py  packet_def.py  scheduler.py
blueos_ros/blueos_ws/src/pez_comms/src/pez_comms/nodes/: comms_node.py
blueos_ros/bluerov_server/: CMakeLists.txt  package.xml
blueos_ros/bluerov_server/scripts/: server.py
blueos_ros/pez_comms/: package.xml  setup.py
blueos_ros/pez_comms/config/: bluerov_config.yaml
blueos_ros/pez_comms/launch/: comms.launch.xml
blueos_ros/pez_comms/src/pez_comms/core/: packet_def.py  serial_test.py
blueos_ros/pez_comms/src/pez_comms/nodes/: comms_node.py
docker_blueos/: Dockerfile  entrypoint.sh  ros_entrypoint.sh
docker_pez_ros/: Dockerfile  entrypoint.sh
pez/pez_humble/: Dockerfile  docker-compose.yml
pez/pez_humble/pez_ws/: test.csv  test_plot.py  test_stat.csv
pez/pez_humble/pez_ws/install/: local_setup.sh  setup.sh
pez/pez_humble/pez_ws/log/: latest_build
pez/pez_humble/pez_ws/src/pez_control/: package.xml  setup.cfg  setup.py
pez/pez_humble/pez_ws/src/pez_core/: setup.py  (+1 more)
pez_ros/pez_docker/: Dockerfile  README.md
pez_ros/pez_docker/comms/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
pez_ros/pez_docker/host/: Dockerfile  README.md  dev_entrypoint.sh  docker-compose.yml  entrypoint.sh
pez_ros/pez_docker/pez/: Dockerfile  README.md  docker-compose.yml  ros_entrypoint.sh
pez_ros/pez_humble/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
pez_ros/pez_humble/docker_blueos_arm32 (discarded)/: Dockerfile  ros_entrypoint.sh
pez_ros/pez_humble/pez_ws/: README.md
pez_ros/pez_humble/pez_ws/src/pez_comms/: README.md  package.xml  setup.cfg  setup.py
pez_ros/pez_humble/pez_ws/src/pez_comms/config/: bluerov_comms.yaml  bluerov_joy_config.yaml  fish_comms.yaml  fish_comms_test.yaml  guide_config.yaml  host_comms.yaml  host_comms_test.yaml
pez_ros/pez_humble/pez_ws/src/pez_comms/config/40 bits/: fish_comms.yaml  host_comms.yaml
pez_ros/pez_humble/pez_ws/src/pez_comms/config/8 bits/: host_comms.yaml
pez_ros/pez_humble/pez_ws/src/pez_comms/core/: modem_io.py  packet_def.py
pez_ros/pez_humble/pez_ws/src/pez_comms/launch/: bluerov_launch.py  comms_launch.py  fish_launch.py  host_launch.py  teleopboya_launch.py  test_launch.py
pez_ros/pez_humble/pez_ws/src/pez_comms/nodes/: comms_node.py
pez_ros/pez_humble/pez_ws/src/pez_comms/pez_comms/: fish_master.py  fish_side.py  host_side.py  utility.py
pez_ros/pez_humble/pez_ws/src/pez_comms/plugins/: fish_side.py  host_side.py
pez_ros/pez_humble/pez_ws/src/pez_comms/src/pez_comms/core/: modem_io.py  packet_def.py  serial_emulator.py  tritech_test.py
pez_ros/pez_humble/pez_ws/src/pez_comms/src/pez_comms/nodes/: comms_node.py
pez_ros/pez_humble/pez_ws/src/pez_comms/src/pez_comms/plugins/: fish_side.py  host_side.py
pez_ros/pez_humble/pez_ws/src/pez_core/: README.md  package.xml  setup.cfg  setup.py
pez_ros/pez_humble/pez_ws/src/pez_core/config/: README.md  axis_params.yaml  joystick_params.yaml  test.xml
pez_ros/pez_humble/pez_ws/src/pez_core/launch/: README.md  controller_launch(discarded).py  joy_launch.py  teleop_launch.py
pez_ros/pez_humble/pez_ws/src/pez_core/pez_core/: README.md  aux.py  fish_joy.py  fish_sense.py  fish_teleop.py  rosbag_video.py
pez_ros/pez_humble/pez_ws/src/pez_core/pez_core/sensors/: __init__.py  ms5837.py  ms5837_sensor.py  sensor_manager.py  tsys01.py  tsys01_sensor.py
pez_ros/pez_humble/pez_ws/src/pez_core/srv/: GetSensors.srv
pez_ros/pez_humble/pez_ws/src/pez_interfaces/: CMakeLists.txt  README.md  package.xml
pez_ros/pez_humble/pez_ws/src/pez_interfaces/msg/: ServiceRTT.msg
pez_ros/pez_humble/pez_ws/src/pez_interfaces/srv/: SnapSensors.srv
pez_ros/pez_humble/pez_ws/src/pez_joy/: README.md  package.xml  setup.cfg  setup.py
pez_ros/pez_humble/pez_ws/src/pez_joy/config/: bluerov_joy_config.yaml  pez_experiment.yaml  pez_plot.xml  pez_rqt.perspective
pez_ros/pez_humble/pez_ws/src/pez_joy/launch/: blueboat_launch.py  bridge_launch.py  display_launch.py  experiment_launch.py  joy_launch.py  pez_launch.py  teleop_launch.py
pez_ros/pez_humble/pez_ws/src/pez_joy/pez_joy/: bluerov_joy.py  pez_joy.py
pez_ros/pez_humble/pez_ws/src/pez_joy/pez_joy/experiment/: cmd_svc_player.py  experiment_player.py  joy_player.py
pez_ros/pez_noetic(discarded)/: README.md
pez_ros/pez_noetic(discarded)/docker_pez_ros(discarded)/: Dockerfile  docker-compose.yml
pez_ws/.github/workflows/: .build-and-push.yml.swp  build-and-push.yml
pez_ws/docker_pez_ros/: Dockerfile
pez_ws/src/bluerobotics_navigator_stub/: CMakeLists.txt  package.xml
pez_ws/src/bluerobotics_navigator_stub/bluerobotics_navigator/: __init__.py
pez_ws/src/pez/: CMakeLists.txt  package.xml
pez_ws/src/pez/config/: joystick_params.yaml  pez.perspective  pez_params.yaml
pez_ws/src/pez/launch/: controller.launch  joy_teleop.launch
pez_ws/src/pez/scripts/: girona_joy.py  joystick.py  movement_ctrl.py  pez_axis_controller.py  pez_joy.py  pez_services.py
pez_ws/src/pez_mov_control/: CMakeLists.txt  package.xml
pez_ws/src/pez_mov_control/scripts/: movement_ctrl.py  movement_ctrl_axisctrl.py
practicas_ws/network_monitoring_pkg/: CMakeLists.txt  package.xml
practicas_ws/network_monitoring_pkg/config/: acoustic_modem.yaml
practicas_ws/network_monitoring_pkg/launch/: iperf_client.launch.xml  iperf_server.launch.py
practicas_ws/network_monitoring_pkg/src/: bandwidth_node.cpp
(+56 files in other folders)
