<?xml version="1.0"?>
<package format="2">
  <name>bluerov_server</name>
  <version>0.1.0</version>
  <description>
    Translates /cmd_vel, /camara_servo, /arm_disarm and /luces_pwm into MAVROS RC-overrides for BlueRov.
  </description>

  <maintainer email="you@example.com"></maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
