<?xml version="1.0"?>
<package format="3">
  <name>pez_comms</name>
  <version>0.1.0</version>
  <description>
    Config-driven, unified communications engine for the Pez robotic fish (host & fish-side).
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>        <!-- for Float32, Empty, etc. -->
  <depend>geometry_msgs</depend>   <!-- for Twist -->
  <depend>sensor_msgs</depend>     <!-- for Joy, if you trigger on joystick -->
  <depend>std_srvs</depend>        <!-- for Trigger services -->
  <depend>pez_interfaces</depend>  <!-- your GetSensors/SnapSensors srv definitions -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
