<?xml version="1.0"?>
<package format="3">
  <name>pez_core</name>
  <version>0.1.0</version>
  <description>Pez control nodes ported to ROS 2 Humble</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 1) buildtool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 2) build-time dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 3) run-time (exec) dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>    <!-- for SetParametersResult -->
  <depend>sensor_msgs</depend>       <!-- for Joy, Temperature, FluidPressure -->
  <depend>geometry_msgs</depend>     <!-- for Twist -->
  <depend>std_msgs</depend>          <!-- for Header, Float32 -->
  <depend>std_srvs</depend>          <!-- for Trigger -->
  <depend>joy</depend>
  <depend>pez_comms</depend>

  <!-- 4) tell ament that this package provides a .srv interface -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
