<?xml version="1.0"?>
<package format="3">
  <name>pez_joy</name>
  <version>0.1.0</version>
  <description>Joystick tele-operation node for the Robot Fish (“PEZ”) project.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 1) build-tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 2) build-time dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- 3) run-time (exec) dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>     <!-- for SetParametersResult -->
  <depend>sensor_msgs</depend>        <!-- Joy, Temperature, FluidPressure -->
  <depend>geometry_msgs</depend>      <!-- Twist -->
  <depend>std_msgs</depend>           <!-- Header, Float32 -->
  <depend>std_srvs</depend>           <!-- Trigger -->
  <depend>joy</depend>
  <depend>pez_interfaces</depend>     <!-- SnapSensors srv, etc. -->
  <depend>pez_comms</depend>
  <depend>pez_core</depend>           <!-- for pez_core.srv.SnapSensors -->


  <!-- Linters / tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
